--- a/master/haproxy.cfg.template
+++ b/master/haproxy.cfg.template
@@ -48,9 +48,10 @@ defaults
     timeout http-keep-alive 10s
     timeout check           10s
     maxconn                 3000
-    stats disable
+    stats enable
     stats refresh 10s
     stats uri /stats
+    stats auth admin:password
     
 frontend  owltree18080 *:18080
     default_backend             OwlTree
